--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
       context: ./backend
     ports:
       - "3000:3000"
+    env_file:
+      - ./backend/.env
     environment:
       - DATABASE_URL=mongodb://mongo:27017/auth_module
-      - JWT_SECRET=supersecretkey
-      - JWT_EXPIRES_IN=3600s
       - PORT=3000
     restart: always
     depends_on:
